<resources>
    <string name="are_you_achieving_your_goal_with_this_amount_of_your_plan">Are you achieving your goal with this amount of your plan?</string>
    <string name="please_wait_we_re_connecting_you_to_your_teacher">we’re connecting you to your teacher..</string>
    <string name="please_wait">Please wait</string>
    <string name="hangup">Hangup</string>
    <string name="confirm">Confirm</string>
    <string name="thank_you_for_your_rating">Thank you for your rating</string>
    <string name="response_recorded">Response recorded</string>
    <string name="sendError_text">Look out!  </string>
    <string name="internet_speed">Internet speed</string>
    <string name="sendScuc_text">Well done</string>
    <string name="speaker">Speaker</string>
    <string name="mute">Mute</string>
    <string name="pause">Pause</string>
    <string name="permission_request">We need access to your microphone  and camera to be able to make calls through the app</string>
    <string name="ok">OK</string>
    <string name="server_error">Sorry, there is something went wrong, please try again later</string>
    <string name="internetConnectionError">Sorry, there is no internet connection</string>
    <string name="dont_have_balance">Sorry, you don\'t have enough balance to continue this call</string>
    <string name="unfreeze_account_message"> Your account has been frozen, Do you want to unfrozen it?</string>
    <string name="account_unfrozen_sucessfully">Account unfrozen successfully</string>
    <string name="somethingWrong">Something went wrong</string>
    <string name="internet_speed_weak">Weak Connection.</string>
    <string name="internet_speed_bad">Bad Connection.</string>
    <string name="internet_speed_good">Good Connection.</string>
    <string name="apologize">We apologize for not answering the teacher</string>
    <string name="internet_speed_low">Internet speed is Low</string>
    <string name="no_internet_speed">No Internet</string>
    <string name="trying_reach_teacher">Trying to reach Teacher</string>
    <string name="update">Update</string>
    <string name="rate_teacher_first">Please rate the teacher first</string>
    <string name="teacher_evaluation_required">Please evaluate the teacher</string>
    <string name="call_interrupted_message_teacher">Sorry, the call has been interrupted by the teacher please wait a while for reconnecting the call or hang up the call now</string>
    <string name="call_evaluation">What is your satisfaction level with the call quality?</string>
    <string name="teacherRating">Teacher rating</string>
    <string name="unAuthentication">unAuthenticated</string>
    <string name="teacherrating">Teacher Rating - </string>
    <string name="fromaya">from verse :</string>
    <string name="fromsoura">From Surah :</string>
    <string name="connection_evaluation_required">Please evaluate the connection</string>
    <string name="cancel">Cancel</string>
    <string name="valid_gender">please enter valid gender</string>
    <string name="name_req">Name is required</string>
    <string name="email_req">Email is required</string>
    <string name="valid_language">please enter valid language</string>
    <string name="valid_phone">please enter valid phone</string>
    <string name="valid_email">please enter valid email</string>
    <string name="no_teachers">We apologize for the lack of teachers now, please try later</string>



</resources>
