<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/v_remote_video"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/waitingBlack" />
    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/incall_bg"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <ImageView
        android:layout_width="wrap_content"
        android:src="@drawable/quran_txt_ic"
        android:layout_gravity="center"
        android:layout_height="wrap_content"/>
    <FrameLayout
        android:id="@+id/warning_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent">

        <RelativeLayout
            android:id="@+id/success_relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/likebutton"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:src="@drawable/clapping" />

            <com.moddakir.call.view.widget.TextViewCalibriBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/likebutton"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:text="@string/sendScuc_text"
                android:textColor="@color/white"
                android:textSize="20dp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/error_relative"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/warm_iv"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_centerInParent="true"
                android:src="@drawable/warning_1" />

            <com.moddakir.call.view.widget.TextViewCalibriBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/warm_iv"
                android:layout_centerInParent="true"
                android:layout_marginTop="5dp"
                android:text="@string/sendError_text"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:textStyle="bold" />
        </RelativeLayout>


    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_width="95dp"
            android:layout_height="95dp"
            android:layout_marginTop="110dp"
            android:id="@+id/border"
            android:src="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/civ_teacher_image1"
            android:layout_width="90dp"
            android:layout_height="90dp"
            app:layout_constraintBottom_toBottomOf="@+id/border"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/border" />

        <com.moddakir.call.view.widget.TextViewCalibriBold
            android:id="@+id/remoteUser1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="Name"
            android:textColor="@color/colorWhite"
            android:textSize="22dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/civ_teacher_image1" />


        <com.moddakir.call.view.widget.TextViewUniqueLight
            android:id="@+id/tv_duration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="00 : 00 : 00"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/remoteUser1" />

        <RelativeLayout
            android:id="@+id/re1"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toStartOf="@+id/rel2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rel2">

            <ImageButton
                android:id="@+id/iv_speaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_speaker_oncall" />

            <com.moddakir.call.view.widget.TextViewCalibriBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_speaker"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/speaker"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="12dp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rel2"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintBottom_toTopOf="@+id/rl_decline"
            app:layout_constraintEnd_toStartOf="@+id/rel3"
            app:layout_constraintStart_toEndOf="@+id/re1">

            <ImageButton
                android:id="@+id/iv_mute"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="8dp"
                android:background="@drawable/btn_mute_oncall" />

            <com.moddakir.call.view.widget.TextViewCalibriBold
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_mute"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/mute"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="12dp" />

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rel3"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rel2"
            app:layout_constraintTop_toTopOf="@id/rel2"
            >

            <ImageButton
                android:id="@+id/iv_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"

                android:layout_marginBottom="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/btn_video_oncall" />

            <com.moddakir.call.view.widget.TextViewCalibriBold
                android:id="@+id/tv_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_camera"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/pause"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="14sp" />
        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rl_decline"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <ImageButton
                android:id="@+id/iv_decline1"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="center"
                android:src="@drawable/hang_up_ic" />

            <com.moddakir.call.view.widget.TextViewCalibriBold
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_decline1"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:layout_marginTop="5dp"
                android:text="@string/hangup"
                android:textAlignment="center"
                android:textColor="@color/red"
                android:textSize="12dp" />
        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.moddakir.call.view.widget.TextViewLateefRegOT
        android:id="@+id/tv_internet_status"
        android:layout_width="match_parent"
        android:layout_height="37dp"
        android:layout_marginTop="10dp"
        android:background="@color/colorBusy"
        android:gravity="center"
        android:text="@string/internet_speed"
        android:textColor="@color/colorWhite"
        android:textSize="16dp"
        android:visibility="gone"
        tools:visibility="visible" />

    <ImageButton
        android:visibility="gone"
        android:id="@+id/callInfo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="start"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="@dimen/_50sdp"
        android:layout_marginRight="20dp"
        android:adjustViewBounds="true"
        android:background="@drawable/history_background_rounded"
        android:backgroundTint="@color/colorWhite"
        android:padding="8dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_info" />



</FrameLayout>
